components/Section/Section.module.scss
.container {
  min-height: 100vh;
  max-width: 80rem;
  margin-inline: auto;
  position: relative;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  overflow: hidden;

  @media (max-width: 1240px) {
    padding: 1rem;
  }

  article {
    position: relative;
  }
}

.title {
  font-family: "TT Arlen Chunky", sans-serif;
  font-size: 50vh;
  color: var(--turquoise);
  margin: 0;
  padding: 0;
  position: absolute;
  left: 0;
  top: 50vh;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0.3;
  pointer-events: none;
  user-select: none;
}

.content {
  flex: 1;
  display: flex;
  flex-direction: column;
}

